# zerion_scoring

./: README.md  parse_data.ipynb  pyproject.toml  representation.py  run_cli.py  settings.yaml
core/: Ml_model.py  client_utils.py  feature_gen.py  model.cbm  parsing.py  preprocess.py  request.py
data/: address__2-3_trades.csv  address__2_3_trades.npy  address__top100_by_trades.csv  address_top100.npy  data_v1.csv
models/: model_2.cbm
notebooks/: Concat data.ipynb  parse_chunk_address [part1].ipynb  parse_chunk_address [part2].ipynb  parse_chunk_address.ipynb  parse_one_address.ipynb  test_parsing.ipynb
notebooks/.ipynb_checkpoints/: parse_one_address-checkpoint.ipynb
