[tool.poetry]
name = "Zerion Scoring"
version = "0.1.0"
description = ""
authors = ["GGWP"]

[tool.poetry.dependencies]
python = "3.8.2"
PyYAML = "^5.4.1"
python-socketio = "4.6.1"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
jupyterlab = "^3.0.16"
pandas = "^1.2.4"
plotly = "^4.14.3"
tqdm = "^4.61.1"
numpy = "^1.20.3"
scipy = "^1.6.3"
tables = "^3.6.1"
dash = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
